[package]
name = "docx-meta-update"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12" }
rfd = "0.15"                                                        # Rustic File Dialogs, a robust cross-platform file dialog library
zip = "4.3"
quick-xml = { version = "0.38", features = ["serialize", "tokio"] }
chrono = "0.4"                                                      # For handling dates and times
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

